2й спринт. Исправлены замечания. 2 итерация.

--- a/index.html
+++ b/index.html
@@ -4,144 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <!--  <link rel="stylesheet" href="styles/normalize.css" /> -->
     <link rel="stylesheet" href="pages/index.css" />
-    <!--     <link rel="stylesheet" href="blocks/page/page.css" />
-    <link rel="stylesheet" href="blocks/header/header.css" />
-    <link rel="stylesheet" href="blocks/logo/logo.css" />
-    <link rel="stylesheet" href="blocks/logo/_place/logo_place_header.css" />
-    <link rel="stylesheet" href="blocks/header/__title/header__title.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/header/__subtittle/header__subtitle.css"
-    />
-    <link rel="stylesheet" href="blocks/header/__link/header__link.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/header/__main-illustration/header__main-illustration.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/header/__square-pic/header__square-pic.css"
-    />
-    <link rel="stylesheet" href="blocks/description/description.css" />
-    <link rel="stylesheet" href="blocks/two-columns/two-columns.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/two-columns/__main-text/two-columns__main-text.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/two-columns/__brief/two-columns__brief.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/two-columns/__paragraph/two-columns__paragraph.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/two-columns/__span-accent/two-columns__span-accent.css"
-    />
-    <link rel="stylesheet" href="blocks/digits/digits.css" />
-    <link rel="stylesheet" href="blocks/section-title/section-title.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/section-subtitle/section-subtitle.css"
-    />
-    <link rel="stylesheet" href="blocks/table/table.css" />
-    <link rel="stylesheet" href="blocks/table/__cell/table__cell.css" />
-    <link rel="stylesheet" href="blocks/table/__heading/table__heading.css" />
-    <link rel="stylesheet" href="blocks/table/__text/table__text.css" />
-    <link rel="stylesheet" href="blocks/feynman/feynman.css" />
-    <link rel="stylesheet" href="blocks/feynman/__title/feynman__title.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/feynman/__subtitle/feynman__subtitle.css"
-    />
-    <link rel="stylesheet" href="blocks/feynman/__link/feynman__link.css" />
-    <link rel="stylesheet" href="blocks/feynman/__img/feynman__img.css" />
-    <link rel="stylesheet" href="blocks/kaufman/kaufman.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/section-title/_theme/section-title_theme_dark.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/section-subtitle/_theme/section-subtitle_theme_dark.css"
-    />
-    <link rel="stylesheet" href="blocks/table/_theme/table_theme_dark.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/table/__cell/_theme/table__cell_theme_dark.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/kaufman/__triangle/kaufman__triangle.css"
-    />
-    <link rel="stylesheet" href="blocks/footer/footer.css" />
-    <link rel="stylesheet" href="blocks/footer/__columns/footer__columns.css" />
-    <link rel="stylesheet" href="blocks/footer/__column/footer__column.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/footer/__column/_content/footer__column_content_copyright.css"
-    />
-    <link rel="stylesheet" href="blocks/footer/__author/footer__author.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/footer/__column-heading/footer__column-heading.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/footer/__column-links/footer__column-links.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/footer/__social-icon/footer__social-icon.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/footer/__column-link/footer__column-link.css"
-    />
-    <link rel="stylesheet" href="blocks/rotation/rotation.css" />
-    <link rel="stylesheet" href="blocks/techniques/techniques.css" />
-    <link rel="stylesheet" href="blocks/cards/cards.css" />
-    <link rel="stylesheet" href="blocks/cards/__item/cards__item.css" />
-    <link rel="stylesheet" href="blocks/cards/__image/cards__image.css" />
-    <link rel="stylesheet" href="blocks/cards/__title/cards__title.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/cards/__description/cards__description.css"
-    />
-    <link rel="stylesheet" href="blocks/video/video.css" />
-    <link rel="stylesheet" href="blocks/video/__iframes/video__iframes.css" />
-    <link rel="stylesheet" href="blocks/video/__iframe/video__iframe.css" />
-    <link rel="stylesheet" href="blocks/oakley/oakley.css" />
-    <link rel="stylesheet" href="blocks/khan/khan.css" />
-    <link rel="stylesheet" href="blocks/khan/__container/khan__container.css" />
-    <link rel="stylesheet" href="blocks/khan/__author/khan__author.css" />
-    <link rel="stylesheet" href="blocks/khan/__tittle/khan__tittle.css" />
-    <link rel="stylesheet" href="blocks/khan/__quote/khan__quote.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/khan/__quote-author/khan__quote-author.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/khan/__quote-author-subline/khan__quote-author-subline.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks/khan/__book-container/khan__book-container.css"
-    />
-    <link rel="stylesheet" href="blocks/khan/__book-pik/khan__book-pik.css" />
-    <link rel="stylesheet" href="blocks/khan/__buy-link/khan__buy-link.css" />
-    <link rel="stylesheet" href="blocks/resources/resources.css" />
-    <link
-      rel="stylesheet"
-      href="blocks/resources/__logo-zone/resources__logo-zone.css"
-    />
-    <link rel="stylesheet" href="blocks/resources/__link/resources__link.css" />
-    <link rel="stylesheet" href="blocks/resources/__logo/resources__logo.css" /> -->
   </head>
 
   <body>
@@ -168,7 +31,7 @@
 
       <main class="content">
         <section class="description">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -189,14 +52,14 @@
                 техники применяются на примере обучения в Практикуме.
               </p>
             </div>
-          </div>
+          </article>
         </section>
 
         <section class="techniques" id="troubles-in-learning">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-          <div class="cards">
-            <div class="cards__item">
+          <ul class="cards">
+            <li class="cards__item">
               <img
                 class="cards__image"
                 src="blocks/images/cards-attention.png"
@@ -207,8 +70,8 @@
                 Глубокие знания возникают, если чередовать сфокусированное и
                 рассеянное мышление.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 class="cards__image"
                 src="blocks/images/cards-recall.png"
@@ -219,9 +82,9 @@
                 Вспоминайте изученное — это позволит соединить разрозненные
                 порции памяти.
               </p>
-            </div>
+            </li>
 
-            <div class="cards__item">
+            <li class="cards__item">
               <img
                 class="cards__image"
                 src="blocks/images/cards-interliving.png"
@@ -232,8 +95,8 @@
                 Изучайте несколько навыков одновременно, они обогащают друг
                 друга.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 class="cards__image"
                 src="blocks/images/cards-question.png"
@@ -244,8 +107,8 @@
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
                 действительно волнует.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 class="cards__image"
                 src="blocks/images/cards-competence.png"
@@ -256,31 +119,33 @@
                 Повторите про себя, запишите, расскажите другу: вам только
                 кажется, что вы владеете новой темой.
               </p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
 
         <section class="video">
           <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
-          <div class="video__iframes">
-            <iframe
-              class="video__iframe"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
-              title="YouTube video player"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="video__iframe"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
-              title="YouTube video player"
-              allowfullscreen
-            ></iframe>
-          </div>
+          <ul class="video__iframes">
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/arj7oStGLkU"
+                allowfullscreen
+              ></iframe>
+            </li>
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/5MgBikgcWnY"
+                allowfullscreen
+              ></iframe>
+            </li>
+          </ul>
         </section>
 
         <section class="oakley">
-          <div class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -294,13 +159,15 @@
                 кому всё ясно с первого взгляда.
               </p>
             </div>
-          </div>
+          </article>
         </section>
 
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть</p>
-          <a class="feynman__link" href="#!">Подробнее &rarr;</a>
+          <a class="feynman__link" target="_blank" href="#!"
+            >Подробнее &rarr;</a
+          >
           <img class="feynman__img" src="images/feynman.png" alt="Фейман" />
         </section>
 
@@ -369,11 +236,16 @@
             <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
             <div class="khan__book-container">
               <img
-                class="khan__book-pik"
+                class="khan__book-pic"
                 src="images/khan-book.jpg"
                 alt="Весь мир - школа"
               />
-              <a class="khan__buy-link" href="#!">Купить книгу &rarr;</a>
+              <a
+                target="_blank"
+                class="khan__buy-link"
+                href="https://www.ozon.ru/product/162999126/?sh=Sh0g1bJfEA&utm_campaign=productpage_link&utm_medium=share_button&utm_source=smm"
+                >Купить книгу &rarr;
+              </a>
             </div>
           </div>
         </section>
@@ -443,41 +315,52 @@
           <p class="section-subtitle">
             Больше материалов о техниках и лайфхаках обучения
           </p>
-          <div class="resources__logo-zone">
-            <a class="resources__link" href="#!"
-              ><img
-                class="resources__logo"
-                src="images/logo/resources-arzamas.svg"
-                alt="Арзамас"
-            /></a>
-            <a class="resources__link" href="#!"
-              ><img
-                class="resources__logo"
-                src="images/logo/resources-n1.svg"
-                alt="Н+1"
-            /></a>
-            <a class="resources__link" href="#!"
-              ><img
-                class="resources__logo"
-                src="images/logo/resources-strelka.svg"
-                alt="Стрелка"
-            /></a>
-            <a class="resources__link" href="#!"
-              ><img
-                class="resources__logo"
-                src="images/logo/resources-polka.svg"
-                alt="Полка"
-            /></a>
-          </div>
+          <ul class="resources__logo-zone">
+            <li>
+              <a class="resources__link" target="_blank" href="#!"
+                ><img
+                  class="resources__logo"
+                  src="images/logo/resources-arzamas.svg"
+                  alt="Арзамас"
+              /></a>
+            </li>
+            <li>
+              <a class="resources__link" target="_blank" href="#!"
+                ><img
+                  class="resources__logo"
+                  src="images/logo/resources-n1.svg"
+                  alt="Н+1"
+              /></a>
+            </li>
+            <li>
+              <a class="resources__link" target="_blank" href="#!"
+                ><img
+                  class="resources__logo"
+                  src="images/logo/resources-strelka.svg"
+                  alt="Стрелка"
+              /></a>
+            </li>
+            <li>
+              <a class="resources__link" target="_blank" href="#!"
+                ><img
+                  class="resources__logo"
+                  src="images/logo/resources-polka.svg"
+                  alt="Полка"
+              /></a>
+            </li>
+          </ul>
         </section>
       </main>
 
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
-            <a href="https://practicum.yandex.ru/profile/ux-research/"
+            <a
+              href="https://practicum.yandex.ru/profile/ux-research/"
+              target="_blank"
               ><img
                 class="logo logo_place_footer"
+                target="_blank"
                 src="images/logo/logo_place_footer.svg"
                 alt="Лого Яндекс Практикум"
             /></a>
@@ -486,16 +369,28 @@
           <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
             <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#!">Главная</a></li>
-              <li><a class="footer__column-link" href="#!">Концепция</a></li>
-              <li><a class="footer__column-link" href="#!">Наставники</a></li>
+              <li>
+                <a target="_blank" class="footer__column-link" href="#!"
+                  >Главная</a
+                >
+              </li>
+              <li>
+                <a target="_blank" class="footer__column-link" href="#!"
+                  >Концепция</a
+                >
+              </li>
+              <li>
+                <a target="_blank" class="footer__column-link" href="#!"
+                  >Наставники</a
+                >
+              </li>
             </ul>
           </nav>
-          <div class="footer__column footer__column_content_social">
+          <nav class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
               <li>
-                <a class="footer__column-link" href="#!">
+                <a class="footer__column-link" href="#!" target="_blank">
                   <img
                     src="images/facebook_color_white.svg"
                     class="footer__social-icon"
@@ -504,7 +399,7 @@
                 </a>
               </li>
               <li>
-                <a class="footer__column-link" href="#!">
+                <a class="footer__column-link" href="#!" target="_blank">
                   <img
                     src="images/vk_color_white.svg"
                     class="footer__social-icon"
@@ -513,7 +408,7 @@
                 </a>
               </li>
               <li>
-                <a class="footer__column-link" href="#!">
+                <a class="footer__column-link" href="#!" target="_blank">
                   <img
                     src="images/instagram_color_white.svg"
                     class="footer__social-icon"
@@ -522,7 +417,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </nav>
         </div>
       </footer>
     </div>
