2 спринт. 3ая итерация

--- a/index.html
+++ b/index.html
@@ -127,16 +127,18 @@
           <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
           <ul class="video__iframes">
-            <li>
+            <li class="video__iframe">
               <iframe
-                class="video__iframe"
                 src="https://www.youtube.com/embed/arj7oStGLkU"
+                width="515px"
+                height="316px"
                 allowfullscreen
               ></iframe>
             </li>
-            <li>
+            <li class="video__iframe">
               <iframe
-                class="video__iframe"
+                width="515px"
+                height="316px"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
                 allowfullscreen
               ></iframe>
@@ -224,7 +226,7 @@
         <section class="khan">
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
-            <h2 class="khan__tittle">Весь мир - школа</h2>
+            <h2 class="khan__title">Весь мир - школа</h2>
             <p class="khan__quote">
               Страсть и новаторство Сала Хана меняют процесс обучения миллионов
               студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
