2 спринт. 3ая итерация.

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             </li>
             <li class="video__iframe">
               <iframe
-                width="515px"
-                height="316px"
+                width="515"
+                height="316"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
                 allowfullscreen
               ></iframe>
