2 спринт. 3ья итерация.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <li class="video__iframe">
               <iframe
                 src="https://www.youtube.com/embed/arj7oStGLkU"
-                width="515px"
-                height="316px"
+                width="515"
+                height="316"
                 allowfullscreen
               ></iframe>
             </li>
