2 спринт. 4ая итерация

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <img
           class="logo logo_place_header"
-          src="blocks/images/logo/logo_place_header.svg"
+          src="images/logo/logo_place_header.svg"
           alt="Лого Яндекс Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
@@ -23,7 +23,7 @@
         </p>
         <img
           class="header__main-illustration"
-          src="blocks/images/header-image/header-image.png"
+          src="images/header-image.png"
           alt="изображение шапки"
         />
         <div class="header__square-pic rotation"></div>
@@ -62,7 +62,7 @@
             <li class="cards__item">
               <img
                 class="cards__image"
-                src="blocks/images/cards-attention.png"
+                src="images/cards-attention.png"
                 alt="101 эссе, которые изменят ваше мышление"
               />
               <h3 class="cards__title">Два вида внимания</h3>
@@ -74,7 +74,7 @@
             <li class="cards__item">
               <img
                 class="cards__image"
-                src="blocks/images/cards-recall.png"
+                src="images/cards-recall.png"
                 alt="Скульптура думающего юноши"
               />
               <h3 class="cards__title">Recall</h3>
@@ -87,7 +87,7 @@
             <li class="cards__item">
               <img
                 class="cards__image"
-                src="blocks/images/cards-interliving.png"
+                src="images/cards-interliving.png"
                 alt="окулус, Нью-Йорк"
               />
               <h3 class="cards__title">Интервливинг</h3>
@@ -99,7 +99,7 @@
             <li class="cards__item">
               <img
                 class="cards__image"
-                src="blocks/images/cards-question.png"
+                src="images/cards-question.png"
                 alt="Вопросы"
               />
               <h3 class="cards__title">Вопросы</h3>
@@ -111,7 +111,7 @@
             <li class="cards__item">
               <img
                 class="cards__image"
-                src="blocks/images/cards-competence.png"
+                src="images/cards-competence.png"
                 alt="Книги"
               />
               <h3 class="cards__title">Иллюзия компетентности</h3>
@@ -127,18 +127,16 @@
           <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
           <ul class="video__iframes">
-            <li class="video__iframe">
+            <li class="video__iframe-item">
               <iframe
+                class="video__iframe"
                 src="https://www.youtube.com/embed/arj7oStGLkU"
-                width="515"
-                height="316"
                 allowfullscreen
               ></iframe>
             </li>
-            <li class="video__iframe">
+            <li class="video__iframe-item">
               <iframe
-                width="515"
-                height="316"
+                class="video__iframe"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
                 allowfullscreen
               ></iframe>
